--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.3",
     "tailwindcss": "^4.1.3",
+    "@supabase/supabase-js": "^2.49.4",
     "vue": "^3.5.13"
   },
   "devDependencies": {
